--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,7 @@ jobs:
     working_directory: /go/src/github.com/christianwoehrle/admissioncontroller
     steps:
       - checkout
+      - run: go mod download
+      - run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags="-w -s" 
       - run: go get -v -t -d ./...
       - run: go test -v -race ./...
